default/objects/CCS_Additional_HW__c/CCS_Additional_HW__c.object-meta.xml
<CustomObject>
    <description>Custom object for CCS Additional HW (Carnet Orders) used by automated connection to Merlin.</description>
    <label>CCS Additional HW/Service</label>
    <nameField>
        <label>CCS Additional HW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCS Additional HW/Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>