default/objects/CCS_Additional_HW__c/fields/CAN_Reader__c.field-meta.xml
<CustomField>
    <fullName>CAN_Reader__c</fullName>
    <label>CAN Reader w/ contact</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>