default/objects/CCS_Additional_HW__c/fields/CAN_Reader_contactless__c.field-meta.xml
<CustomField>
    <fullName>CAN_Reader_contactless__c</fullName>
    <label>CAN Reader contactless</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>