default/objects/CCS_Additional_HW__c/fields/CAN_Reader_Fee__c.field-meta.xml
<CustomField>
    <fullName>CAN_Reader_Fee__c</fullName>
    <label>CAN Reader w/ contact Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>