default/objects/CCS_Additional_HW__c/fields/CCS_Order__c.field-meta.xml
<CustomField>
    <fullName>CCS_Order__c</fullName>
    <label>CCS Order</label>
    <referenceTo>CCS_Order__c</referenceTo>
    <relationshipLabel>CCS Additional HW/Service</relationshipLabel>
    <relationshipName>CCS_Additional_HW</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>