default/objects/CCS_Additional_HW__c/fields/Dallas_Chip__c.field-meta.xml
<CustomField>
    <fullName>Dallas_Chip__c</fullName>
    <label>Dallas Chip</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>