default/objects/CCS_Additional_HW__c/fields/Dallas_Chip_Fee__c.field-meta.xml
<CustomField>
    <fullName>Dallas_Chip_Fee__c</fullName>
    <label>Dallas Chip Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>