default/objects/CCS_Additional_HW__c/fields/Drivers_ID_Dallas_Reader__c.field-meta.xml
<CustomField>
    <fullName>Drivers_ID_Dallas_Reader__c</fullName>
    <label>Drivers ID - Dallas Reader (w/ contact)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>