default/objects/CCS_Additional_HW__c/fields/Drivers_ID_RFID_Reader_Fee__c.field-meta.xml
<CustomField>
    <fullName>Drivers_ID_RFID_Reader_Fee__c</fullName>
    <label>Drivers ID - RFID Reader Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>