default/objects/CCS_Additional_HW__c/fields/External_Antenna__c.field-meta.xml
<CustomField>
    <fullName>External_Antenna__c</fullName>
    <label>External Antenna for better signal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>