default/objects/CCS_Additional_HW__c/fields/External_Antenna_Fee__c.field-meta.xml
<CustomField>
    <fullName>External_Antenna_Fee__c</fullName>
    <label>External Antenna for better signal Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>