default/objects/CCS_Additional_HW__c/fields/RFID_Card__c.field-meta.xml
<CustomField>
    <fullName>RFID_Card__c</fullName>
    <label>RFID Card</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>