default/objects/CCS_Additional_HW__c/fields/RFID_Chip__c.field-meta.xml
<CustomField>
    <fullName>RFID_Chip__c</fullName>
    <label>RFID Chip</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>