default/objects/CCS_Additional_HW__c/fields/Unit_Installation__c.field-meta.xml
<CustomField>
    <fullName>Unit_Installation__c</fullName>
    <label>Unit Installation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>