default/objects/CCS_Additional_HW__c/fields/Unit_Installation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unit_Installation_Fee__c</fullName>
    <label>Unit Installation Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>